--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+html, body {
+    padding: 0;
+    margin: 0;
+    
+    box-sizing: border-box;
+    background: #f0f2f5;
+}
+
 .custom-list {
     .ant-spin-container {
         .ant-list-items {
@@ -10,6 +18,6 @@
     }
 }
 
-.ant-layout-content {
-    height: calc(100vh - 200px);
+.ant-typography {
+    text-align: center;
 }
